2014-07-23  Ryan R. Boyce  <boycerya@msu.edu>

    * Makefile: fixed >80 character line wrap-around

2014-07-23  Leonor Garcia-Gutierrez  <l.garcia-gutierrez@warwick.ac.uk>

    * tests/test_hashbits.py, tests/test_graph.py, 
    tests/test_lump.py: reduced memory requirement
    
2014-07-23  Heather L. Wiencko  <wienckhl@tcd.ie>

    * khmer_tst_utils.py: added import traceback
    * test_scripts.py: added test for normalize_by_median.py for fpr rate

2014-07-22  Justin Lippi  <jlippi@gmail.com>
 
    * khmer/_khmermodule.cc: removed unused assignment
    * lib/read_aligner.cc,lib/read_aligner.hh: wrapped function declarations
    in the same compiler options that the only invocations are in to avoid
    unusedPrivateFunction violation.
    * lib/read_parsers.cc: fix redundantassignment error by assigning variable
    to its value directly

2014-07-22  Michael R. Crusoe  <mcrusoe@msu.edu>

    * Makefile: combine pip invocation into single "install-dependencies"
    target.

2014-07-22  Justin Lippi  <jlippi@gmail.com>

    * tests/test_subset_graph.py: decrease the amount of memory that is being
    requested for the hash tables in test.

2014-07-22  Jim Stapleton  <jas@msu.edu>

     * scripts/filter-abund.py: no longer asks for parameters that are unused,
     issue #524

2014-07-22  Justin Lippi  <jlippi@gmail.com> 

    * tests/khmer_tst_utils.py: put runscript here
    * tests/test_sandbox_scripts.py: remove 'runsandbox', renamed to runscript
      and placed in khmer_tst_utils
    * tests/test_scripts.py: removed 'runscript' and placed in khmer_tst_utils

2014-07-24  Ivan Gonzalez  <iglpdc@gmail.com>

    * lib/khmer.hh, lib/khmer_exception.hh: All exceptions are now derived from
	a new base class exception, khmer::khmer_exception. Issue #508.
    * lib/counting.cc, lib/hashbits.cc, lib/hashtable.{cc,hh},lib/kmer_hash.cc,
	lib/labelhash.cc, lib/perf_metrics.hh, lib/read_parsers.{cc,hh},
	lib/subset.cc, lib/thread_id_map.hh: All exceptions thrown are now